src/styles/gameshows/Jepoardy.css
.jp-controller {
    font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
    color: azure;
    text-align: center;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.jp-controller .jp-board {
    border: #00d1f1a9 5px solid;
    border-radius: 10px
}

.jp-board {
    position: relative;
    width: 1314px !important;
    height: 608px !important;
    border-radius: 10px;
    background-color: #040b2d;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: top;
    font-family: "Inter";
    font-weight: bold;
}

.jp-category {
    width: 258px;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
}

.jp-cat-default {
    filter: grayscale(0%);
}

.jp-cat-forced {
    filter: grayscale(100%);
}

.jp-category-name {
    width: 258px;
    height: 125px;
    background-color: #0F1D62;
    margin-bottom: 9px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    cursor: default;
}

.jp-category-name p {
    color: #E6D8B9;
    font-size: 36px;
    rotate: -3deg;
    text-align: center;
    word-wrap: normal;
}

.jp-category-questions {
    width: 258px;
    height: 473px;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    cursor: default;
}

.jp-category-question {
    width: 258px;
    height: 90px;
    background-color: #0F1D62;
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.jp-category-question p {
    font-size: 50px;
    color: #DBAF51;
    margin: 0;
    letter-spacing: 2px;
    text-align: center;
}

.jp-Active {
    background-color: #0F1D62;
    color: #DBAF51;
}

.jp-Taunt {
    background-image: url("../../jepoardy/taunt.png");
    width: 260px;
}

.jp-Taunted {
    cursor: not-allowed !important;
    filter: grayscale(70%);
}

.jp-Taunted:Hover {
    transform: none !important;
    transition: none !important;
}

.jp-Windfury {
    background-image: url("../../jepoardy/windfury.png");
}

.jp-Gold {
    background-image: url("../../jepoardy/gold.png");
    color: #78560D;
    width: 255px;
}

.jp-Gold p {
    color: #78560D;
}

.jp-Inactive {
    background-color: #030821f2;
}

.jp-Inactive p {
    color: #2a2a2a;
}

.jp-Safezone {
    border: solid 5px #00FE61a1;
}

.jp-Safezone p {
    color: #0CCE79;
}

.jp-Corrupted {
    border: solid 3px #780606;
    background-color: #290303;
}

.jp-Corrupted p {
    color: #F10000;
}

.jp-overlay {
    width: 1920px;
    height: 1080px;
    position: absolute;
    overflow: hidden;
    background-color: #040b2d;
    color: azure;
}

.jp-overlay .jp-board {
    position: absolute;
    right: 75px;
    top: 75px
}

.jp-VDOStreams {
    position: absolute;
    bottom: 117px;
    width: 1771px;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    left: 74px;
}

.jp-VDOLinkStreamDiv {
    position: relative;
    width: 400px;
    height: 225px;
}

.jp-VDOLinkStream {
    width: 400px;
    height: 225px;
}

.jp-StreamAdmin {
    position: absolute;
    width: 480px;
    height: 270px;
    left: 30px;
    top: 75px;
}

.jp-StreamAdmin iframe {
    width: 480px;
    height: 270px;
}

.jp-boardCutout {
    position: absolute;
    overflow: hidden;
}

.jp-playerPointsDiv {
    position: absolute;
    bottom: 60px;
    width: 1771px;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    left: 74px;
}

.jp-playerPoints {
    width: 400px;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
}

.jp-playerPoints div {
    font-family: "Inter";
    font-weight: bold;
    font-size: 32px;
    color: #E6D8B9;
    text-align: center;
    margin: 5px;
}

.jp-buzzerQueue {
    position: absolute;
    right: 0px;
    top: 0px;
    min-width: 286px !important;
    height: 500px !important;
    margin: 5px !important;
}

.jp-adminQuestion {
    cursor: pointer;
}

.jp-adminQuestion:hover {
    /* box-shadow: 0 0 20px 5px #FFD700, 0 0 40px 10px #fff5cc inset; */
    /* background: linear-gradient(135deg, rgba(255, 223, 77, 0.3) 0%, rgba(255, 255, 255, 0.08) 100%); */
    transform: scale(1.05);
    transition:
        box-shadow 0.25s cubic-bezier(.22, .68, .57, 1.11),
        transform 0.25s cubic-bezier(.22, .68, .57, 1.11);
}

.jp-question {
    position: absolute;
    /* left: 207px;
    top: 104px; */
    font-family: "Inter";
    font-weight: bold;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: 100%;
    backdrop-filter: blur(5px);
}

.jp-question-title {
    margin: 20px;
    letter-spacing: 2px;
    font-size: 26px;
    color: #DBAF51;
    text-align: center;
}

.jp-question-container {
    position: relative;
    width: 900px;
    height: 400px;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: center;
    background-color: #0F1D62;
    border: 10px #852185 solid;
    border-radius: 40px;
}

.jp-question-container .jp-category-question {
    background-color: #20359B;
    box-shadow: 5px 5px 15px 5px #111;
    position: absolute;
    top: 0px;
    left: 0px;
    transform: scale(0.7);
}

.jp-question-container .jp-Inactive p {
    color: #DBAF51 !important;
}

.jp-question-randomizer {
    width: 90%;
    height: 50%;
    /* background-color: red; */
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    align-items: center;
}

.jp-randomThings {
    border: 12px solid #3E90FA;
    background-color: #20359B;
    border-radius: 20px;
    width: 150px;
    height: 150px;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    transition: border-color 0.08s ease-out;
}
/* ... */

